header image resolution lowered and updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <!-- Text -->
         <div class="header-text">
-            <img src="./assets/pexels-fauxels-3183197.png">
+            <img src="./assets/pexels-fauxels-3183197(1).png">
             <div class="header-left-text">
                 <h2>Empowering your business with the best solution</h2>
                 <p>We connect your brand & businesses with your target market in the most desirable, refined, elvated way possible through the digital medium</p>
